--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "gumball_v2",
+  "name": "gumball_v3",
   "description": "Simple Test Form",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
     "express": "3.x",
+    "express3-handlebars": "0.5.2",
     "fs": "0.0.2",
     "node-rest-client": "1.4.1",
     "crypto": "0.0.3"
