--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "fs": "0.0.2",
     "node-rest-client": "1.4.1",
     "crypto": "0.0.3"
+  },
+   "scripts": {
+    "start": "node app.js"
   }
 }
