--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+/*{
   "name": "gumball_v4",
   "description": "Simple Test Form",
   "version": "1.0.0",
@@ -10,9 +10,32 @@
     "async": "0.9.0",
     "fs": "0.0.2",
     "node-rest-client": "1.4.1",
-    "crypto": "0.0.3"
+    "crypto": "0.0.3",
   },
    "scripts": {
     "start": "node app.js"
+  }
+}*/
+
+
+{
+  "name": "gumball_v4",
+  "description": "Simple Test Form",
+  "version": "1.0.0",
+  "main": "app.js",
+  "engines": {
+    "node": "8.9.4"
+  },
+  "private": true,
+  "scripts": {
+    "start": "node app.js",
+    "test": "vows --spec"
+  },
+  "dependencies": {
+    "express": "3.x",
+    "fs": "0.0.2",
+    "mongodb": ">=2.0.14",
+    "node-rest-client": "1.4.1",
+    "vows": "^0.8.1"
   }
 }
